src/main/java/org/example/Solid/good/i/StringTraversal.java
package org.example.Solid.good.i;

import java.util.Map;
public interface StringTraversal {
    int wordCount(String text);
    int CharacterCount(String text);
    Map<Character,Integer> charFreq(String text);
}